--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "mongoose": "^8.4.5",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
     "socket.io": "^4.7.5"
   }
